# asistente_pro

./: .env.example  .gitignore  pyproject.toml
docs/: informe_flutter_app.md
firmware/esp32_casa/: esp32_casa.ino
src/asistente/: __init__.py  config.py  handlers.py  home_zones.py  intents.py  knowledge_chain.py  main.py  pipeline.py  router.py  router_followup.py
src/asistente/api/: __init__.py  __main__.py  app.py  schemas.py
src/asistente/api/routes/: __init__.py  query.py
src/asistente/memory/: __init__.py  ingest.py  long_term.py  session_store.py
src/asistente/tools/: __init__.py  geocoding.py  home_reply.py  local_time.py  mqtt_publish.py  weather.py  weather_codes.py  weather_day_parser.py  weather_focus.py  weather_time_window.py
