[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asistente-personal"
version = "0.1.0"
description = "Asistente personal para el hogar (LangChain + OpenAI)"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "langchain-core>=0.3,<1",
    "langchain-openai>=0.2,<1",
    "langchain-community>=0.3,<1",
    "langchain>=0.3,<1",
    "paho-mqtt>=1.6.1,<2",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
